day 6 part 2 mais pas opti